# zed

./: Cargo.toml  delete-unused-crates.fish  delete-unused-crates.txt  rust-toolchain.toml  taplo.toml  typos.toml
.cargo/: config.toml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/settings/: default.json
crates/activity_indicator/: Cargo.toml
crates/anthropic/: Cargo.toml
crates/askpass/: Cargo.toml
crates/assets/: Cargo.toml
crates/audio/: Cargo.toml
crates/auto_update/: Cargo.toml
crates/aws_http_client/: Cargo.toml
crates/bedrock/: Cargo.toml
crates/breadcrumbs/: Cargo.toml
crates/buffer_diff/: Cargo.toml
crates/call/: Cargo.toml
crates/channel/: Cargo.toml
crates/cli/: Cargo.toml
crates/client/: Cargo.toml
crates/clock/: Cargo.toml
crates/cloud_api_types/: Cargo.toml
crates/collab/: Cargo.toml
crates/collections/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/command_palette_hooks/: Cargo.toml
crates/component/: Cargo.toml
crates/component_preview/: Cargo.toml
crates/context_server/: Cargo.toml
crates/context_server_settings/: Cargo.toml
crates/credentials_provider/: Cargo.toml
crates/dap/: Cargo.toml
crates/dap_adapters/: Cargo.toml
crates/db/: Cargo.toml
crates/debugger_tools/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/docs_preprocessor/: Cargo.toml
crates/edit_prediction_button/: Cargo.toml
crates/storybook/: Cargo.toml
crates/storybook/src/: story_selector.rs
docs/: book.toml
(+243 files in other folders)
