[package]
name = "storybook"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "storybook"
path = "src/storybook.rs"

[dependencies]
anyhow.workspace = true
editor.workspace = true
fuzzy.workspace = true
indoc.workspace = true
language.workspace = true
log.workspace = true
menu.workspace = true
picker.workspace = true
project.workspace = true
reqwest_client.workspace = true
rust-embed.workspace = true
settings.workspace = true
simplelog.workspace = true
story.workspace = true
theme.workspace = true
workspace.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
ctrlc = "3.4"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
gpui = { workspace = true, default-features = true }
strum = { workspace = true, features = ["derive"] }
title_bar = { workspace = true, features = ["stories"] }
ui = { workspace = true, features = ["stories"] }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
